--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,43 @@
+*{
+    box-sizing: border-box;
+}
 body {
     color: #333;
 }
 
+ul {
+    margin:0;
+    padding: 0;
+}
+
+li{
+    list-style: none;
+}
+
+.widget{
+    display: flex;
+    flex-direction: row;
+    border: 2px solid grey;
+    width: 350px;
+}
+.cards-image{
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 10px;
+}
+
+.card-img{
+    width: 30px;
+    height: 20px;
+    margin-right: 5px;
+    border: 1px solid grey;
+    border-radius: 5px;
+}
+
+img{
+    width: 100%;
+    height: 100%;
+}
 .hidden {
     display: none;
 }
@@ -16,7 +52,7 @@ body {
     border-radius: .25rem;
 }
 
-.btn {
+button {
     display: inline-block;
     text-align: center;
     vertical-align: middle;
@@ -26,42 +62,17 @@ body {
     line-height: 1.5;
     border-radius: .25rem;
     border: 1px solid #ced4da;
+    background-color: greenyellow;
 }
 
-.contact-list {
-    list-style-type: none;
-    display: flex;
-    flex-direction: column;
-    padding-left: 0;
-    margin-bottom: 0;
-    max-width: 500px;;
+.widget-input{
+    height: 30px;
+    border: 2px solid gray;
+    border-radius: 5px;
 }
 
-
-.contact-list-item:first-child, .contact-list-item:last-child {
-    border-top-left-radius: .25rem;
-    border-top-right-radius: .25rem;
-}
-
-.contact-list-item {
-    position: relative;
-    display: block;
-    padding: .75rem 1.25rem;
-    margin-bottom: -1px;
-    background-color: #fff;
-    border: 1px solid #ced4da;
-}
-
-.contact-main {
-    display: flex;
-    align-items: center;
-}
-
-.contact-list-item-img {
-    border-radius: 50%;
-    margin-right: 1rem;
-}
-
-.contact-list-item-name, .contact-list-item-phone, .contact-list-item-action {
-    margin-right: 1rem;
+.widget-input:focus{
+    border: 2px solid white;
+outline: none;
+box-shadow: 0 0 0 3px lightskyblue;
 }
