--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,11 +14,14 @@ li{
     list-style: none;
 }
 
+.container{
+    display: flex;
+    justify-content: center;
+}
+
 .widget{
     display: flex;
     flex-direction: row;
-    border: 2px solid grey;
-    width: 350px;
 }
 .cards-image{
     display: flex;
@@ -27,19 +30,16 @@ li{
 }
 
 .card-img{
-    width: 30px;
-    height: 20px;
-    margin-right: 5px;
+    width: 50px;
+    height: 30px;
+    margin-right: 3px;
     border: 1px solid grey;
-    border-radius: 5px;
+    border-radius: 3px;
 }
 
 img{
     width: 100%;
     height: 100%;
-}
-.hidden {
-    display: none;
 }
 
 .input {
@@ -61,20 +61,16 @@ button {
     font-size: 1rem;
     line-height: 1.5;
     border-radius: .25rem;
-    border: 1px solid #ced4da;
-    background-color: greenyellow;
+    border: 1px solid #ced4da; 
+    background-color: rgb(8, 255, 53);
+    cursor: pointer;
+    margin-left: 2px;
 }
 
 .widget-input{
     height: 30px;
     border: 2px solid gray;
     border-radius: 5px;
-}
-
-.widget-input:focus{
-    border: 2px solid white;
-outline: none;
-box-shadow: 0 0 0 3px lightskyblue;
 }
 
 .valid {border: green 2px solid}
